[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools-scm[toml]>=6.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "espsim"
version = "0.0.1"
description = "Scoring of shape and ESP similarity with RDKit"
readme = "README.md"
authors = [
    {name = "Esther Heid", email = "eheid@mit.edu"}
]
license = {text = "MIT"}
urls = { "Source" = "https://github.com/acelot-inc/espsim" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = [
    "chemistry",
    "electrostatic potential",
    "shape",
    "similarity",
    "RDKit"
]

[tool.setuptools.package-data]
"espsim" = ["QM_137k.pt"]

[tool.setuptools.dynamic]
version = {use_scm = true}